// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Select" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  margin-bottom: 20px;
}

.emotion-1:focus-within label {
  color: #0667c8;
}

.emotion-2 {
  background: #fff center right 16px no-repeat url("data:image/svg+xml;utf8,%0A%20%20%20%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%3E%0A%20%20%20%20%20%20%20%20%3Cpath%20fill%3D%22rgb(29%2C%2030%2C%2031)%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M7.99963%2012.5711L15.6565%204.91421L14.2423%203.5L7.99963%209.74264L1.75699%203.5L0.342773%204.91421L7.99963%2012.5711Z%22%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A");
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 16px;
  padding-right: 30px;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-2:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-2:invalid,
.emotion-2 option:first-of-type {
  color: #c20013;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #9fa1a7;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 1px #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <select
      className="emotion-2"
    >
      <option
        disabled={true}
        hidden={true}
        selected={true}
      >
        - Please select -
      </option>
      <option>
        a
      </option>
      <option>
        b
      </option>
    </select>
  </div>
</div>
`;

exports[`"Select" renders as disabled 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  margin-bottom: 20px;
}

.emotion-1:focus-within label {
  color: #0667c8;
}

.emotion-2 {
  background: #edeff0 center right 16px no-repeat url("data:image/svg+xml;utf8,%0A%20%20%20%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%3E%0A%20%20%20%20%20%20%20%20%3Cpath%20fill%3D%22rgb(29%2C%2030%2C%2031)%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M7.99963%2012.5711L15.6565%204.91421L14.2423%203.5L7.99963%209.74264L1.75699%203.5L0.342773%204.91421L7.99963%2012.5711Z%22%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A");
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: normal;
  font-size: 16px;
  padding-right: 30px;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-2:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-2:invalid,
.emotion-2 option:first-of-type {
  color: #c20013;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <select
      className="emotion-2"
      disabled={true}
    >
      <option
        disabled={true}
        hidden={true}
        selected={true}
      >
        - Please select -
      </option>
      <option>
        a
      </option>
      <option>
        b
      </option>
    </select>
  </div>
</div>
`;

exports[`"Select" renders as invalid 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  margin-bottom: 2px;
}

.emotion-1:focus-within label {
  color: #0667c8;
}

.emotion-2 {
  background: #fff center right 16px no-repeat url("data:image/svg+xml;utf8,%0A%20%20%20%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%3E%0A%20%20%20%20%20%20%20%20%3Cpath%20fill%3D%22rgb(29%2C%2030%2C%2031)%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M7.99963%2012.5711L15.6565%204.91421L14.2423%203.5L7.99963%209.74264L1.75699%203.5L0.342773%204.91421L7.99963%2012.5711Z%22%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A");
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #c20013;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 16px;
  padding-right: 30px;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-2:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-2:invalid,
.emotion-2 option:first-of-type {
  color: #c20013;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #9fa1a7;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 1px #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <select
      className="emotion-2"
    >
      <option
        disabled={true}
        hidden={true}
        selected={true}
      >
        - Please select -
      </option>
      <option>
        a
      </option>
      <option>
        b
      </option>
    </select>
  </div>
</div>
`;
